refactor: analytics - UserTrackFeatureStats and UserMusicEraSummary
Moved from SQL native to Java centric approach on generating user analytics data